2nd training/Community/Community/Community1/force-app/main/default/objects/Insurance__c/Insurance__c.object-meta.xml
<CustomObject>
    <label>Insurance</label>
    <nameField>
        <displayFormat>Ins-{000000}</displayFormat>
        <label>Insurance Ref No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>