2nd training/Community/Community/Community1/force-app/main/default/objects/Insurance__c/fields/Amount_Quoted__c.field-meta.xml
<CustomField>
    <fullName>Amount_Quoted__c</fullName>
    <label>Amount Quoted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>