2nd training/Community/Community/Community1/force-app/main/default/objects/Insurance__c/fields/Certification_No__c.field-meta.xml
<CustomField>
    <fullName>Certification_No__c</fullName>
    <label>Certification No.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>