2nd training/Community/Community/Community1/force-app/main/default/objects/Insurance__c/fields/Days_Insured__c.field-meta.xml
<CustomField>
    <fullName>Days_Insured__c</fullName>
    <formula>Insurance_Expiry_Date2__c - Insurance_Issue_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Insured</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>