2nd training/Community/Community/Community1/force-app/main/default/objects/Insurance__c/fields/Expired__c.field-meta.xml
<CustomField>
    <fullName>Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expired</label>
    <type>Checkbox</type>
</CustomField>