2nd training/Community/Community/Community1/force-app/main/default/objects/Insurance__c/fields/Insurance_Charge_mth__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Charge_mth__c</fullName>
    <label>Insurance Charge/mth</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>