2nd training/Community/Community/Community1/force-app/main/default/objects/Insurance__c/fields/Insurance_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Expiry_Date__c</fullName>
    <formula>Insurance_Issue_Date__c + Number_of_Days_Insured__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Expiry Datex</label>
    <type>Date</type>
</CustomField>