2nd training/Community/Community/Community1/force-app/main/default/objects/Insurance__c/fields/Insurance_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Issue_Date__c</fullName>
    <label>Policy Issuance Date</label>
    <type>Date</type>
</CustomField>