2nd training/Community/Community/Community1/force-app/main/default/objects/Insurance__c/fields/Insured_Cost__c.field-meta.xml
<CustomField>
    <fullName>Insured_Cost__c</fullName>
    <formula>Insured_Value__c  *  Insured_Cost_perc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insured Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>