2nd training/Community/Community/Community1/force-app/main/default/objects/Insurance__c/fields/Insured_Cost_perc__c.field-meta.xml
<CustomField>
    <fullName>Insured_Cost_perc__c</fullName>
    <formula>IF(DATEVALUE(CreatedDate) &lt;= DATE(2020,11,30),
IF( ISPICKVAL( Item_Type__c ,&quot;Non-Fragile&quot;),0.000045,
IF( ISPICKVAL( Item_Type__c ,&quot;Fragile&quot;),0.00007,
IF( ISPICKVAL( Item_Type__c ,&quot;Non-Fragile (Auction House)&quot;),0.000036,
IF( ISPICKVAL( Item_Type__c ,&quot;Fragile (Auction House)&quot;),0.000056,0
)))),
If(DATEVALUE(CreatedDate) &gt;= DATE(2020,12,1) &amp;&amp; DATEVALUE(CreatedDate) &lt;= DATE(2021,9,30),

IF( ISPICKVAL( Item_Type__c ,&quot;Non-Fragile&quot;),0.00004725,
IF( ISPICKVAL( Item_Type__c ,&quot;Fragile&quot;),0.0000735,
IF( ISPICKVAL( Item_Type__c ,&quot;Non-Fragile (Auction House)&quot;),0.0000378,
IF( ISPICKVAL( Item_Type__c ,&quot;Fragile (Auction House)&quot;),0.0000588,0
)))),

If(DATEVALUE(CreatedDate) &gt;= DATE(2021,10,1),

IF( ISPICKVAL( Item_Type__c ,&quot;Non-Fragile&quot;),0.0000496,
IF( ISPICKVAL( Item_Type__c ,&quot;Fragile&quot;),0.0000772,
IF( ISPICKVAL( Item_Type__c ,&quot;Non-Fragile (Auction House)&quot;),0.0000397,
IF( ISPICKVAL( Item_Type__c ,&quot;Fragile (Auction House)&quot;),0.0000617,0
)))),0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insured Cost %</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>