2nd training/Community/Community/Community1/force-app/main/default/objects/Insurance__c/fields/Insured_Value__c.field-meta.xml
<CustomField>
    <fullName>Insured_Value__c</fullName>
    <label>Insured Value</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>