2nd training/Community/Community/Community1/force-app/main/default/objects/Insurance__c/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <label>Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Fragile</fullName>
            </value>
            <value>
                <fullName>Fragile</fullName>
            </value>
            <value>
                <fullName>Non-Fragile (Auction House)</fullName>
            </value>
            <value>
                <fullName>Fragile (Auction House)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>