2nd training/Community/Community/Community1/force-app/main/default/objects/Insurance__c/fields/Job_Reference__c.field-meta.xml
<CustomField>
    <fullName>Job_Reference__c</fullName>
    <formula>Storage__r.Job_Reference__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Reference</label>
    <type>Text</type>
</CustomField>