2nd training/Community/Community/Community1/force-app/main/default/objects/Insurance__c/fields/Markup__c.field-meta.xml
<CustomField>
    <fullName>Markup__c</fullName>
    <formula>Amount_Quoted__c  -  Insured_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Markup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>